# himrep

./: CMakeLists.txt  README.md  README_Caffe.md  index.html
caffeCoder/app/conf/: imagenet_val.prototxt  imagenet_val_cutfc6.prototxt  imagenet_val_cutfc7.prototxt
caffeCoder/src/: CMakeLists.txt
doxygen/: doc-compile.ps1  doc-compile.sh  generate.txt
doxygen/doc/html/: CaffeFeatExtractor_8hpp_source.html  DictionaryLearning_8cpp_source.html  DictionaryLearning_8h_source.html  GIECoder_2src_2main_8cpp_source.html  GIEFeatExtractor_8cpp_source.html  GIEFeatExtractor_8h_source.html  SVMLinear_8cpp_source.html  SVMLinear_8h_source.html  SVMNonLin_8cpp_source.html  SVMNonLin_8h_source.html  SiftGPU__Extractor_8cpp_source.html  SiftGPU__Extractor_8h_source.html  caffeCoder_2src_2main_8cpp_source.html  cudaUtility_8h_source.html  dir_00ee9bf4172099f7e5c5c860386dd09e.html  dir_04891fc93f867f63d97c9b04618b3e4c.html  dir_229099f27a364a4056bfce7673014cf3.html  dir_3a30cfe7d2e1a2ecd70bd382957d371a.html  dir_411683f8804b80b7f7043ece1ed61b42.html  dir_4891338175f8223a69c081c4f51e1a95.html  dir_77f7234a4c12af62f8ad316586086140.html  dir_9dd3b008de72e8e602d2490f6176d1d4.html  dir_ad90daf590eb108e5d558f3d5bfe2c2d.html  dir_adc7bbacd447c5fd749f7f5f013e3c12.html  dir_c90b9300af30087e289a1ba96979f12c.html  dir_d98528e3c76c9a1f56dca8d59fac8e9c.html  dir_e05d7e2b1ecd646af5bb94391405f3b5.html  dir_ec4ab4788bddde6630238cdf1966c04a.html  files.html  group__GIECoder.html  group__caffeCoder.html  group__icub__linearClassifier.html  group__icub__sparseCoder.html  index.html  linearClassifierModule_2src_2main_8cpp_source.html  linearClassifierModule_8cpp_source.html  linearClassifierModule_8h_source.html  linearClassifierThread_8cpp_source.html  linearClassifierThread_8h_source.html  md__home_runner_work_himrep_himrep_gh-pages_modules_GIECoder_README.html  (+12 more)
doxygen/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  pages_1.js  searchdata.js
doxygen/doc/latex/: group__GIECoder.tex  group__caffeCoder.tex  group__icub__linearClassifier.tex  group__icub__sparseCoder.tex  md__home_runner_work_himrep_himrep_gh-pages_modules_GIECoder_README.tex  md__home_runner_work_himrep_himrep_gh-pages_modules_caffeCoder_README.tex  md__home_runner_work_himrep_himrep_gh-pages_modules_linearClassifierModule_README.tex  md__home_runner_work_himrep_himrep_gh-pages_modules_sparseCoder_README.tex  md__home_runner_work_himrep_himrep_gh_pages_modules_GIECoder_README.tex  md__home_runner_work_himrep_himrep_gh_pages_modules_caffeCoder_README.tex  md__home_runner_work_himrep_himrep_gh_pages_modules_linearClassifierModule_README.tex  md__home_runner_work_himrep_himrep_gh_pages_modules_sparseCoder_README.tex  modules.tex  refman.tex
doxygen/generated-from-xml/: GIECoder.dox  caffeCoder.dox
liblinear-1.91/: CMakeLists.txt
linearClassifierModule/: FindLibSVM.cmake  README.txt
linearClassifierModule/include/: SVMLinear.h  SVMNonLin.h  linearClassifierThread.h
linearClassifierModule/liblinear-1.91/: Makefile
linearClassifierModule/src/: linearClassifierModule.cpp  linearClassifierThread.cpp  main.cpp
modules/: CMakeLists.txt
modules/GIECoder/: CMakeLists.txt  GIECoder.xml  README.md
modules/GIECoder/app/conf/: GIECoder_caffenet.ini  GIECoder_caffenet_iCW_tuned.ini  GIECoder_googlenet.ini  GIECoder_resnet.ini
modules/GIECoder/src/: CMakeLists.txt  GIEFeatExtractor.cpp  GIEFeatExtractor.h  cudaUtility.h  main.cpp
modules/caffeCoder/: CMakeLists.txt  README.md  caffe-version.h.in  caffeCoder.xml
modules/caffeCoder/app/: CMakeLists.txt
modules/caffeCoder/app/conf/: bvlc_googlenet_trainval.prototxt  bvlc_googlenet_val_cut1000.prototxt  bvlc_googlenet_val_cutpool5.prototxt  bvlc_reference_caffenet_val.prototxt  bvlc_reference_caffenet_val_cutfc6.prototxt  bvlc_reference_caffenet_val_cutfc7.prototxt  caffeCoder.ini  caffeCoder_caffenet.ini  caffeCoder_caffenet_iCW_tuned.ini  caffeCoder_googlenet.ini  caffeCoder_resnet.ini  caffenet_iCW_val_cutfc7.prototxt  imagenet_val.prototxt  imagenet_val_cutfc6.prototxt  resnet_val.prototxt
modules/caffeCoder/src/: CMakeLists.txt  CaffeFeatExtractor.hpp  main.cpp
modules/linearClassifierModule/: CMakeLists.txt  FindLibSVMLin.cmake  README.md
modules/linearClassifierModule/include/: linearClassifierModule.h  linearClassifierThread.h
modules/linearClassifierModule/src/: SVMLinear.cpp  SVMNonLin.cpp  linearClassifierModule.cpp  linearClassifierThread.cpp  main.cpp
modules/sparseCoder/: CMakeLists.txt  README.md
modules/sparseCoder/app/conf/: iol_dictionary.ini  sparseCoder.ini
modules/sparseCoder/src/: CMakeLists.txt  DictionaryLearning.cpp  DictionaryLearning.h  SiftGPU_Extractor.cpp  SiftGPU_Extractor.h  main.cpp
sparseCoder/: CMakeLists.txt
sparseCoder/app/: CMakeLists.txt
sparseCoder/app/conf/: dictionary_bow.ini  dictionary_sc.ini
sparseCoder/src/: CMakeLists.txt  DictionaryLearning.cpp  DictionaryLearning.h  SiftGPU_Extractor.cpp  SiftGPU_Extractor.h  main.cpp
